wordpress/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wordpress
  namespace: default
  labels:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: wordpress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: wordpress
              servicePort: http
